fixed display text size and alignment

--- a/style.css
+++ b/style.css
@@ -7,10 +7,15 @@
 }
 
 #display {
+  display: flex;
   background-color: grey;
   height: 70px;
   margin-bottom: 5px;
   border-radius: 5px;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 40px;
+  padding: 0px 5px;
 }
 
 #calc-buttons {
@@ -20,7 +25,7 @@
 }
 
 button {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.877);
   width: 75px;
   height: 75px;
   border-radius: 5px;
